<resources>
    <string name="app_name">GPSReceiver</string>
    <string name="start_service">Start Service</string>
    <string name="stop_button_text">Stop Service</string>
    <string name="update_button_text">Update Values</string>
    <string name="latitude_textview" translatable="false">%s</string>
    <string name="longitude_textview" translatable="false">%s</string>
    <string name="distance_textview" translatable="false">%s m</string>
    <string name="average_speed_textview" translatable="false">%s m/s</string>
    <string name="number_of_waypoints" translatable="false">%s</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="distance">Distance</string>
    <string name="average_speed">⌀ Speed</string>
    <string name="perms">Permission denied</string>
    <string name="no_wp">No waypoint recorded</string>
    <string name="store">Waypoints stored in %s</string>
    <string name="no_store">No waypoints available to store</string>
</resources>