<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/startService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service" />

        <Button
            android:id="@+id/stopService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button_text" />
    </LinearLayout>

    <Button
        android:id="@+id/updateValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button_text"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/updateValues"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/latTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_textview" />

        <TextView
            android:id="@+id/lngTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude_textview" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_textview" />

        <TextView
            android:id="@+id/averageSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_speed_textview" />

        <TextView
            android:id="@+id/numberOfWaypoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_waypoints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>